[package]
name = "pgw"
version = "0.1.12"
edition = "2021"
license = "BUSL-1.1"
homepage = "https://github.com/xxai-art/pgw"
repository = "https://github.com/xxai-art/pgw.git"
description = "auto reconnect tokio postgres"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.32.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync"
] }
tokio-postgres = { package = "xxai-tokio-postgres", version = "0.7.15" }
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
loginit = { version = "0.1.2" }
